--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
      <div class="nav_more">
         <div class="sNav">
           <ul class="sbN4 innav">
-            <li><a href="http://hyhr.cqhyrc.com.cn/recruitment/society" target="_blank">社会招聘</a><>
-            <li><a href="http://hyhr.cqhyrc.com.cn/recruitment/school" target="_blank">校园招聘</a><>
-            <li><a href="http://hyhr.cqhyrc.com.cn/recruitment/practice" target="_blank">实习生招聘</a><>
+            <li><a href="./404.html" target="_blank">社会招聘</a><>
+            <li><a href="./404.html" target="_blank">校园招聘</a><>
+            <li><a href="./404.html" target="_blank">实习生招聘</a><>
             <li><a href="http://hyhr.cqhyrc.com.cn/recruitment/aboutUs" target="_blank">人在商鼎</a><>
           </ul>
         </div>
