--- a/intro.html
+++ b/intro.html
@@ -72,7 +72,7 @@
             <div class="nav-bg"></div>
           </li>
 <li>
-   <a class="more" href="https://cqhy.mycaigou.com/" target="_blank">招采中心</a>
+   <a class="more" href="./404.html" target="_blank">招采中心</a>
    <div class="nav-bg"></div>
 </li>
         </ul>
