--- a/me.html
+++ b/me.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,
     maximum-scale=1, user-scalable=no">
    <!--   <link rel="icon" href="https://xlzy520.cn/icons/lo.ico">--> 
-    <title>分发配送架构设计</title>
+    <title>me</title>
     <style>
         html, body {
             margin: 0;
